Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9664

sanity-hsm test_9a: @@@@@@ FAIL: mds4 CDT state is not 'disabled'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0
    • None
    • None
    • 3
    • 9223372036854775807

      == sanity-hsm test 9a: Multiple remote agents ======================================================== 01:59:31 (1491530371)
      Killing existing copytools on lm0308,lm0309,lm0310
      pdsh@lm0307: lm0309: ssh exited with exit code 1
      pdsh@lm0307: lm0310: ssh exited with exit code 1
      pdsh@lm0307: lm0310: ssh exited with exit code 1
      pdsh@lm0307: lm0308: ssh exited with exit code 1
      pdsh@lm0307: lm0309: ssh exited with exit code 1
      copytools stopped in 2s
      mdt.lustre-MDT0000.hsm_control=shutdown
      mdt.lustre-MDT0001.hsm_control=shutdown
      mdt.lustre-MDT0002.hsm_control=shutdown
      mdt.lustre-MDT0003.hsm_control=shutdown
      Waiting 20 secs for update
      Fri Apr  7 01:59:35 UTC 2017: waited 1 secs for update
      Fri Apr  7 01:59:37 UTC 2017: waited 2 secs for update
      Fri Apr  7 01:59:38 UTC 2017: waited 3 secs for update
      Fri Apr  7 01:59:39 UTC 2017: waited 4 secs for update
      Fri Apr  7 01:59:40 UTC 2017: waited 5 secs for update
      Fri Apr  7 01:59:41 UTC 2017: waited 6 secs for update
      Fri Apr  7 01:59:42 UTC 2017: waited 7 secs for update
      Updated after 7s: wanted 'stopped' got 'stopped'
      mdt.lustre-MDT0000.hsm_control=enabled
      mdt.lustre-MDT0001.hsm_control=enabled
      mdt.lustre-MDT0002.hsm_control=enabled
      mdt.lustre-MDT0003.hsm_control=enabled
      pdsh@lm0307: lm0308: ssh exited with exit code 1
      Purging archive on lm0308
      Starting copytool agt1 on lm0308
      pdsh@lm0307: lm0309: ssh exited with exit code 1
      Purging archive on lm0309
      Starting copytool agt2 on lm0309
      pdsh@lm0307: lm0310: ssh exited with exit code 1
      Purging archive on lm0310
      Starting copytool agt3 on lm0310
      2+0 records in
      2+0 records out
      2097152 bytes (2.1 MB) copied, 0.18558 s, 11.3 MB/s
      Waiting 200 secs for update
      Fri Apr  7 01:59:48 UTC 2017: waited 1 secs for update
      2+0 records in
      2+0 records out
      2097152 bytes (2.1 MB) copied, 0.185937 s, 11.3 MB/s
      Waiting 200 secs for update
      Fri Apr  7 01:59:50 UTC 2017: waited 1 secs for update
      Fri Apr  7 01:59:51 UTC 2017: waited 2 secs for update
      Updated after 2s: wanted 'SUCCEED' got 'SUCCEED'
      2+0 records in
      2+0 records out
      2097152 bytes (2.1 MB) copied, 0.187924 s, 11.2 MB/s
      Waiting 200 secs for update
      Fri Apr  7 01:59:52 UTC 2017: waited 1 secs for update
      Fri Apr  7 01:59:54 UTC 2017: waited 2 secs for update
      Updated after 2s: wanted 'SUCCEED' got 'SUCCEED'
      Killing existing copytools on lm0308,lm0309,lm0310
      pdsh@lm0307: lm0308: ssh exited with exit code 1
      pdsh@lm0307: lm0310: ssh exited with exit code 1
      pdsh@lm0307: lm0309: ssh exited with exit code 1
      copytools stopped in 2s
      mdt.lustre-MDT0000.hsm_control=shutdown
      mdt.lustre-MDT0001.hsm_control=shutdown
      mdt.lustre-MDT0002.hsm_control=shutdown
      mdt.lustre-MDT0003.hsm_control=shutdown
      Waiting 20 secs for update
      Fri Apr  7 01:59:58 UTC 2017: waited 1 secs for update
      Fri Apr  7 01:59:59 UTC 2017: waited 2 secs for update
      Fri Apr  7 02:00:00 UTC 2017: waited 3 secs for update
      Fri Apr  7 02:00:02 UTC 2017: waited 4 secs for update
      Fri Apr  7 02:00:03 UTC 2017: waited 5 secs for update
      Fri Apr  7 02:00:04 UTC 2017: waited 6 secs for update
      Updated after 6s: wanted 'stopped' got 'stopped'
      mdt.lustre-MDT0000.hsm_control=enabled
      mdt.lustre-MDT0001.hsm_control=enabled
      mdt.lustre-MDT0002.hsm_control=enabled
      lm0304: error: set_param: setting /proc/fs/lustre/mdt/lustre-MDT0003/hsm_control=disabled: Invalid argument
      pdsh@lm0307: lm0304: ssh exited with exit code 22
      mdt.lustre-MDT0003.hsm_control=disabled
      Waiting 20 secs for update
      Fri Apr  7 02:00:07 UTC 2017: waited 1 secs for update
      Fri Apr  7 02:00:08 UTC 2017: waited 2 secs for update
      Fri Apr  7 02:00:10 UTC 2017: waited 3 secs for update
      Fri Apr  7 02:00:11 UTC 2017: waited 4 secs for update
      Fri Apr  7 02:00:12 UTC 2017: waited 5 secs for update
      Fri Apr  7 02:00:13 UTC 2017: waited 6 secs for update
      Fri Apr  7 02:00:14 UTC 2017: waited 7 secs for update
      Fri Apr  7 02:00:15 UTC 2017: waited 8 secs for update
      Fri Apr  7 02:00:16 UTC 2017: waited 9 secs for update
      Fri Apr  7 02:00:18 UTC 2017: waited 10 secs for update
      Waiting 10 secs for update
      Fri Apr  7 02:00:19 UTC 2017: waited 11 secs for update
      Fri Apr  7 02:00:20 UTC 2017: waited 12 secs for update
      Fri Apr  7 02:00:21 UTC 2017: waited 13 secs for update
      Fri Apr  7 02:00:22 UTC 2017: waited 14 secs for update
      Fri Apr  7 02:00:23 UTC 2017: waited 15 secs for update
      Fri Apr  7 02:00:25 UTC 2017: waited 16 secs for update
      Fri Apr  7 02:00:26 UTC 2017: waited 17 secs for update
      Fri Apr  7 02:00:27 UTC 2017: waited 18 secs for update
      Fri Apr  7 02:00:28 UTC 2017: waited 19 secs for update
      Fri Apr  7 02:00:29 UTC 2017: waited 20 secs for update
      Update not seen after 20s: wanted 'disabled' got 'stopped'
       sanity-hsm test_9a: @@@@@@ FAIL: mds4 CDT state is not 'disabled' 
      
      

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: